feat: update corsconfig v3